--- a/admin/adminStylesheet.css
+++ b/admin/adminStylesheet.css
@@ -28,7 +28,7 @@ html {
 
 
 /* her justere jeg knapperne i navigation bar*/
-#userButton, #projectButton,#userLevelButton, #createManagerButton{
+#userButton, #projectButton,#userLevelButton, #createManagerButton,#exportButtonXlsx,#exportButton{
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -41,7 +41,7 @@ html {
     display: inline-block;
     margin: 0 auto;
 }
-form,.menu{
+form,.menu, .pdf{
     text-align: center;
 }
 
@@ -60,6 +60,12 @@ form,.menu{
 .sbmt:hover{
     background: rgb(112, 155, 223);
 } 
+#exportButton:hover {
+    background: rgb(112, 155, 223);
+}
+#exportButtonXlsx:hover {
+    background: rgb(112, 155, 223);
+}
 
 /* her justere jeg de forskellig former*/
 #userCreation,#projectCreation,#setUserLevel,#createManagerForProject{
@@ -81,7 +87,7 @@ form,.menu{
 .sbmt{
     cursor: pointer;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 100%;
     padding-left: 0px;
     background: rgb(16, 78, 178);
     color: white;
