--- a/private/homepage.css
+++ b/private/homepage.css
@@ -3,7 +3,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family: 'Times New Roman', Times, serif;
+   font-family: 'Nunito', sans-serif;
 }
 
 /* her redigere jeg baggrund indstillinger*/
@@ -31,7 +31,10 @@ button {
    cursor: pointer;
    font-weight: 600;
    font-size: 20px;
-   padding-left: 0px;
+   padding-top: 7px;
+   padding-bottom: 7px;
+   padding-left: 10px;
+   padding-right: 10px;
    background: rgb(238, 240, 230);
    color: black;
    border: 1px solid rgb(238, 240, 230);
@@ -54,5 +57,6 @@ button a {
 
 /* her justere jeg hovering over navbar og knapperne*/
 Button:hover {
-   background: rgb(112, 155, 223);
+   color: rgb(38, 144, 210);
+   background: rgb(208, 209, 210);
 }
