--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3,7 +3,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family:'Times New Roman', Times, serif;
+   font-family: 'Nunito', sans-serif;
 }
  /* her laver jeg modifikationer på bodys outer udseende */
 html{
