--- a/private/userpage.css
+++ b/private/userpage.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Nunito', sans-serif;
 }
 /* her redigere jeg baggrund indstillinger*/
 html {
@@ -15,38 +15,39 @@ html {
 }
 /* her rediger jeg den div der holder hele tabellen*/
 #container{
-    background-color: bisque;
-    display: grid;
-    max-width: 100%;
+    
+    background-color: rgb(239, 239, 239);
     align-items: center;
+    justify-content: center;
+    font-family: 'Nunito', sans-serif;
+    
 }
+
 
 /*her redigere jeg selve tabellen */
 table{
 	width: 100%;
 	border-collapse: collapse;
-    border-radius: 3px;
+    border-radius: 1px;
 }
 
 /*her rediger jeg de forskellige rows and collumns*/
 table td,table th{
-  border:1px solid #ddd;
+  border-collapse: collapse;  
   text-align: center;
-  font-size:20px;
-  padding:5px 5px;
+  font: size 15px;
+  padding:2px 2px;
+  border: 1px solid white
 }
 table th{
 	background-color: rgb(16, 78, 178);
 	color:#ffffff;
 }
-table tbody tr:nth-child(even){
-	background-color: #f5f5f5;
-}
+
 
 /*her justere jeg input felterne */
 input{
-    border-radius: 10px;
-    padding-left: 5px;
+    padding-left: 0px;
 }
 
 /* her rediger jeg Add Row knappen*/
@@ -69,5 +70,5 @@ input{
 }
 /* her justere jeg hovering over  knappen*/
 #AddRow:hover {
-    background: rgb(112, 155, 223);
-}
+    background: rgb(54, 120, 228);
+}   
