--- a/private/homepage.css
+++ b/private/homepage.css
@@ -1,9 +1,18 @@
 /* det her er universal selector for den complete general indstillinger*/
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Nunito', sans-serif;
+}
+
+#AdminButton{
+   display: none;
+}
+
+#ManagerButton{
+   display: none;
 }
 
 /* her redigere jeg baggrund indstillinger*/
@@ -38,15 +47,30 @@ button {
    background: rgb(238, 240, 230);
    color: black;
    border: 1px solid rgb(238, 240, 230);
+   border: 1px solid rgb(238, 240, 230);
    border-radius: 5px;
-   align-items: center;
-   display: inline-block;
-   margin: 0 auto;
+   margin: 3px;
 }
 
-.container {
-   text-align: center;
+.innermenu{
+place-items: center;
+display: flex;
+margin-left: auto;
+margin-right: auto;
+}
 
+
+.container {
+   margin-left: 84px;
+   display: flex;
+   width: auto;
+}
+
+
+
+#logoutButton {
+    margin-left:auto;
+    margin-right:0;
 }
 
 /* her justere jeg links indenfor */
@@ -60,3 +84,5 @@ Button:hover {
    color: rgb(38, 144, 210);
    background: rgb(208, 209, 210);
 }
+
+
