Email notification  on admin page

--- a/admin/adminStylesheet.css
+++ b/admin/adminStylesheet.css
@@ -30,7 +30,7 @@ html {
 
 
 /* her justere jeg knapperne i navigation bar*/
-#userButton, #projectButton,#userLevelButton, #createManagerButton,#exportButtonXlsx,#exportButton,#CreateTaskButton{
+#userButton, #projectButton,#userLevelButton, #createManagerButton,#exportButtonXlsx,#exportButton,#CreateTaskButton,#EmailNotificationButton{
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -71,6 +71,9 @@ form,.menu, .pdf{
     background: rgb(112, 155, 223);
 }
 #CreateTaskButton:hover{
+    background: rgb(112, 155, 223);
+}
+#EmailNotificationButton:hover{
     background: rgb(112, 155, 223);
 }
 
@@ -134,5 +137,8 @@ input{
     display: none;
 }
 #createTaskForProject{
+    display: none;
+}
+#SetTimeForEmailNotification{
     display: none;
 }
