--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -28,7 +28,7 @@ html {
 }
 
 /* her justere jeg knapperne i navigation bar*/
-#createUserManagerLinkButton , #showProjectsButton {
+#createUserManagerLinkButton , #showProjectsButton, #ManagerButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -42,6 +42,7 @@ html {
     border: 1px solid rgb(238, 240, 230);
     border-radius: 5px;
     margin: 3px;
+    text-decoration: none;
 }
 .menu {
     text-align: center;
@@ -52,6 +53,9 @@ html {
     background: rgb(112, 155, 223);
 }
 #showProjectsButton:hover {
+    background: rgb(112, 155, 223);
+}
+#ManagerButton:hover {
     background: rgb(112, 155, 223);
 }
 .sbmt:hover {
@@ -74,6 +78,10 @@ html {
     height: 180%;
 }
 
+#ManagerButton a {
+    text-decoration: none;
+    color: black;
+}
 /* her rediger jeg submit knapperne*/
 .sbmt {
     cursor: pointer;
@@ -95,8 +103,7 @@ input {
     height: 30px;
 }
 
-
-
 #createUserManagerLink {
     display: none;
 }
+
