--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -64,19 +64,25 @@ html {
 
 /* her justere jeg de forskellig former*/
 #createUserManagerLink{
-    font-weight: 600;
     font-size: 20px;
-    padding-left: 0px;
-    background: rgb(238, 240, 230);
-    color: black;
-    border: 1px solid rgb(238, 240, 230);
-    border-radius: 15px;
-    align-items: center;
-    display: inline-block;
+    font-weight: 400;
+    border-radius: 10px;
     margin: 0 auto;
     width: 80%;
-    height: 180%;
+    padding:50px;
+    background: rgb(238, 240, 230);
 }
+/* her justere jeg form felterne */
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 
 #ManagerButton a {
     text-decoration: none;
@@ -85,7 +91,7 @@ html {
 /* her rediger jeg submit knapperne*/
 .sbmt {
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 20px;
     padding-left: 0px;
     background: rgb(16, 78, 178);
