--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -50,16 +50,24 @@ html {
 
 /* her justere jeg hovering over navbar og knapperne*/
 #createUserManagerLinkButton:hover {
-    background: rgb(112, 155, 223);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 #showProjectsButton:hover {
-    background: rgb(112, 155, 223);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 #ManagerButton:hover {
-    background: rgb(112, 155, 223);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
+#ManagerButton a:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 .sbmt:hover {
-    background: rgb(112, 155, 223);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 
 /* her justere jeg de forskellig former*/
