--- a/private/homepage.css
+++ b/private/homepage.css
@@ -17,7 +17,7 @@
 
 /* her redigere jeg baggrund indstillinger*/
 html {
-   overflow: hidden;
+   margin: auto;
    background: linear-gradient(to bottom, rgba(16, 78, 178, 0.8), rgba(16, 78, 178, 0.25));
    background-repeat: no-repeat;
    background-size: cover;
