--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -7,9 +7,9 @@
 }
  /* her laver jeg modifikationer på bodys outer udseende */
 html{
-   overflow: hidden;
+   margin: auto;
    background: linear-gradient(to bottom, rgba(16, 78, 178, 0.8), rgba(16, 78, 178, 0.25));
-   background-repeat: no-repeat;
+   /*background-repeat: no-repeat;*/
    background-size: cover !important;
    min-height: 100%;
 }
