--- a/admin/adminStylesheet.css
+++ b/admin/adminStylesheet.css
@@ -30,7 +30,7 @@ html {
 
 
 /* her justere jeg knapperne i navigation bar*/
-#userButton, #projectButton,#userLevelButton, #ProjectManagerButton,#exportButtonXlsx,#exportButton,#CreateTaskButton,#EmailNotificationButton{
+#userButton, #projectButton,#userLevelButton,#exportButtonXlsx,#exportButton,#CreateTaskButton,#EmailNotificationButton{
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -59,8 +59,6 @@ form,.menu, .pdf{
 #userLevelButton:hover {
     background: rgb(112, 155, 223);
 }
-#ProjectManagerButton:hover {
-    background: rgb(112, 155, 223);}
 .sbmt:hover{
     background: rgb(112, 155, 223);
 } 
@@ -139,9 +137,6 @@ input{
     display: none;
 }
 
-#CreateProjectManagerContainer{
-    display: none;
-}
 #createTaskForProject{
     display: none;
 }
