--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -23,8 +23,11 @@ body {
     margin: 0;
     margin-left: 3%;
     margin-top: 7px;
-    margin-bottom: 7px;
-    
+    margin-bottom: 7px;   
+}
+
+.menu-button:hover {
+    cursor: pointer;
 }
 
 .text {
@@ -37,6 +40,7 @@ body {
     background-color: darkblue;
     width: 30%;
     height: 50%;
+    border-radius: 0px 0px 30px 0px;
     overflow: hidden;
     -webkit-transition: height 0.2s linear;
     -moz-transition: height 0.2s linear;
@@ -64,6 +68,15 @@ a {
     text-decoration: none;
     color: white;
     font-size: 200%;
+}
+
+.signal {
+    position: absolute;
+    top: 60px;
+    left: 150px;
+    transform: rotate(-45deg);
+    opacity: 0.3;
+    z-index: -1;
 }
 
 .unselectable {
