--- a/private/userpage.css
+++ b/private/userpage.css
@@ -27,9 +27,10 @@ html {
 
 /*her redigere jeg selve tabellen */
 table{
-	width: 100%;
+	width: 90%;
 	border-collapse: collapse;
     border-radius: 1px;
+    margin: 0 auto;
 }
 
 /*her rediger jeg de forskellige rows and collumns*/
