--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3,13 +3,13 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family:'Times New Roman', Times, serif;
+   font-family: 'Nunito', sans-serif;
 }
  /* her laver jeg modifikationer på bodys outer udseende */
 html{
-   overflow: hidden;
+   margin: auto;
    background: linear-gradient(to bottom, rgba(16, 78, 178, 0.8), rgba(16, 78, 178, 0.25));
-   background-repeat: no-repeat;
+   /*background-repeat: no-repeat;*/
    background-size: cover !important;
    min-height: 100%;
 }
@@ -69,7 +69,8 @@ html{
    border: 1px solid rgb(16, 78, 178);
 }
 form .btn input:hover {
-   background: rgb(7, 60, 147);
+   color: rgb(38, 144, 210);
+   background: rgb(208, 209, 210);
 }
 
 
@@ -83,7 +84,4 @@ form .btn input:hover {
    color: rgb(16, 78, 178);
    text-decoration: none;
    font-size: 16px;
-}
-form .pass-word a:hover{
-   text-decoration: underline;
 }
