--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -28,7 +28,7 @@ html {
 }
 
 /* her justere jeg knapperne i navigation bar*/
-#createUserManagerLinkButton , #showProjectsButton, #ManagerButton {
+#projectButton, #ManagerButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -49,11 +49,7 @@ html {
 }
 
 /* her justere jeg hovering over navbar og knapperne*/
-#createUserManagerLinkButton:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-#showProjectsButton:hover {
+#projectButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
@@ -71,7 +67,7 @@ html {
 }
 
 /* her justere jeg de forskellig former*/
-#createUserManagerLink{
+#projectCreation{
     font-size: 20px;
     font-weight: 400;
     border-radius: 10px;
@@ -110,12 +106,6 @@ input[type=text] {
     width: 30%;
 }
 
-/* her redigere jeg skrive felterne*/
-input {
-    border-radius: 5px;
-    width: 30%;
-    height: 30px;
-}
 
 #projectCreation {
     display: none;
