--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -28,7 +28,7 @@ html {
 }
 
 /* her justere jeg knapperne i navigation bar*/
-#createUserManagerLinkButton , #showProjectsButton, #ManagerButton {
+#projectButton, #ManagerButton, #logoutButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -48,12 +48,26 @@ html {
     text-align: center;
 }
 
+.innermenu{
+    place-items: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    }
+    .container {
+        margin-left: 84px;
+        display: flex;
+        width: auto;
+     }
+     
+     
+     #logoutButton {
+        margin-left:auto;
+        margin-right:0;
+     }
+
 /* her justere jeg hovering over navbar og knapperne*/
-#createUserManagerLinkButton:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-#showProjectsButton:hover {
+#projectButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
@@ -62,6 +76,10 @@ html {
     background: rgb(208, 209, 210);
 }
 #ManagerButton a:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
+#logoutButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
@@ -117,7 +135,29 @@ input {
     height: 30px;
 }
 
-#projectCreation {
-    display: none;
+
+form,.menu, .pdf{
+    text-align: center;
 }
 
+/* her justere jeg de forskellig former*/
+#projectCreationForm{
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 80%;
+    padding: 50px;
+    background: rgb(238, 240, 230);
+}
+
+/* her justere jeg form felterne */
+input[type=text],input[type=number],input[type=date],input[type=time],input[type=checkbox],input[type=password] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
