--- a/ProjectManager/stylesheet.css
+++ b/ProjectManager/stylesheet.css
@@ -28,7 +28,7 @@ html {
 }
 
 /* her justere jeg knapperne i navigation bar*/
-#LinkUserToProjectkButton, #showProjectsButton {
+#LinkUserToProjectkButton, #showProjectsButton , #CreateTaskButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -57,7 +57,10 @@ html {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
-
+#CreateTaskButton:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
+}
 .sbmt:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
@@ -80,6 +83,15 @@ html {
     margin: 0 auto;
     width: 80%;
     padding:50px;
+    background: rgb(238, 240, 230);
+}
+#createTaskForProject{
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 80%;
+    padding: 50px;
     background: rgb(238, 240, 230);
 }
 /* her justere jeg form felterne */
@@ -141,3 +153,6 @@ table th{
 display: none;
 }
 
+#createTaskForProject {
+display: none;
+}
