--- a/admin/adminStylesheet.css
+++ b/admin/adminStylesheet.css
@@ -1,5 +1,6 @@
 /* det her er universal selector for den complete general indstillinger*/
 
+
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +8,12 @@
     font-family: 'Nunito', sans-serif;
  }
 
+    font-family: 'Nunito', sans-serif;
+ }
+
 /* her redigere jeg baggrund indstillinger*/
 html {
+    margin: auto;
     margin: auto;
     background: linear-gradient(to bottom, rgba(16, 78, 178, 0.8), rgba(16, 78, 178, 0.25));
     background-repeat: no-repeat;
@@ -39,13 +44,20 @@ html {
     padding-bottom: 7px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: rgb(238, 240, 230);
     color: black;
     border: 1px solid rgb(238, 240, 230);
     border: 1px solid rgb(238, 240, 230);
+    border: 1px solid rgb(238, 240, 230);
     border-radius: 5px;
     margin: 3px;
+    margin: 3px;
 }
+form,.menu, .pdf{
 form,.menu, .pdf{
     text-align: center;
 }
@@ -54,12 +66,18 @@ form,.menu, .pdf{
 #userButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 #projectButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
 }
 #userLevelButton:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
@@ -67,7 +85,13 @@ form,.menu, .pdf{
 #ProjectManagerButton:hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);}
+
+#ProjectManagerButton:hover {
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);}
 .sbmt:hover{
+    color: rgb(38, 144, 210);
+    background: rgb(208, 209, 210);
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 } 
@@ -97,7 +121,13 @@ form,.menu, .pdf{
 }
 /* her justere jeg de forskellig former*/
 #userCreation,#projectCreation,#setUserLevel,#createManagerForProject, #createTaskForProject, #SetTimeForEmailNotification,#CreateProjectManagerContainer,#LinkUserToManagerContainer{
+#userCreation,#projectCreation,#setUserLevel,#createManagerForProject, #createTaskForProject, #SetTimeForEmailNotification,#CreateProjectManagerContainer,#LinkUserToManagerContainer{
     font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
+    margin: 0 auto;
+    width: 80%;
+    padding: 50px;
     font-weight: 400;
     border-radius: 10px;
     margin: 0 auto;
@@ -121,6 +151,7 @@ input[type=text],input[type=number],input[type=date],input[type=time],input[type
 .sbmt{
     cursor: pointer;
     font-weight: 600;
+    font-size: 100%;
     font-size: 100%;
     padding-left: 0px;
     background: rgb(16, 78, 178);
@@ -171,6 +202,13 @@ input{
     display: none;
 }
 
+#createTaskForProject{
+    display: none;
+}
+#SetTimeForEmailNotification{
+    display: none;
+}
+#LinkUserToManagerContainer{
 #createTaskForProject{
     display: none;
 }
