--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -4,10 +4,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 /* her redigere jeg baggrund indstillinger*/
 html {
+    margin: auto;
     margin: auto;
     background: linear-gradient(to bottom, rgba(16, 78, 178, 0.8), rgba(16, 78, 178, 0.25));
     background-repeat: no-repeat;
@@ -36,11 +38,18 @@ html {
     padding-bottom: 7px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: rgb(238, 240, 230);
     color: black;
     border: 1px solid rgb(238, 240, 230);
     border: 1px solid rgb(238, 240, 230);
+    border: 1px solid rgb(238, 240, 230);
     border-radius: 5px;
+    margin: 3px;
+    text-decoration: none;
     margin: 3px;
     text-decoration: none;
 }
@@ -104,7 +113,16 @@ input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
+}
+/* her justere jeg form felterne */
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
     display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
@@ -115,9 +133,15 @@ input[type=text] {
     text-decoration: none;
     color: black;
 }
+
+#ManagerButton a {
+    text-decoration: none;
+    color: black;
+}
 /* her rediger jeg submit knapperne*/
 .sbmt {
     cursor: pointer;
+    font-weight: 400;
     font-weight: 400;
     font-size: 20px;
     padding-left: 0px;
@@ -157,3 +181,4 @@ input[type=text],input[type=number],input[type=date],input[type=time],input[type
     border-radius: 4px;
     box-sizing: border-box;
 }
+
