--- a/private/previous_timesheet/navbar/navbar.css
+++ b/private/previous_timesheet/navbar/navbar.css
@@ -36,6 +36,7 @@ body {
     align-items: center;
     background-color: white;
     font-size: 20px;
+    font-weight: 600;
     width: 120px;
     margin: 0;
     margin-left: 3%;
