--- a/ProjectManager/stylesheet.css
+++ b/ProjectManager/stylesheet.css
@@ -33,19 +33,13 @@ html {
     margin-right: auto;
     }
     .container {
-        margin-left: 84px;
+        margin-left: 0px;
         display: flex;
         width: auto;
      }
-     
-     
-     #logoutButton {
-        margin-left:auto;
-        margin-right:0;
-     }
 
 /* her justere jeg knapperne i navigation bar*/
-#LinkUserToProjectkButton , #showProjectsButton, #logoutButton, #CreateTaskButton {
+#LinkUserToProjectkButton , #showProjectsButton, #CreateTaskButton {
     cursor: pointer;
     font-weight: 600;
     font-size: 20px;
@@ -74,20 +68,8 @@ html {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
-#ManagerButton:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-#ManagerButton a:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
 
-#logoutButton a:hover {
-    color: rgb(38, 144, 210);
-    background: rgb(208, 209, 210);
-}
-#CreateTaskButton{
+#CreateTaskButton :hover {
     color: rgb(38, 144, 210);
     background: rgb(208, 209, 210);
 }
@@ -124,7 +106,7 @@ html {
     padding: 50px;
     background: rgb(238, 240, 230);
 }
-#LinkUserToProjectContainer,#createTaskForProject { 
+#LinkUserToProjectContainer,#createTaskForProject, #showProjects { 
     text-align: center;
 }
 /* her justere jeg form felterne */
