--- a/manager/Aprovetime.css
+++ b/manager/Aprovetime.css
@@ -28,7 +28,7 @@ html {
 }
 
 /* her justere jeg de forskellig former*/
-#UserHolder,#timesheetcontainer {
+#UserHolder,.timesheetcontainerClass {
   font-size: 20px;
   font-weight: 400;
   border-radius: 10px;
