--- a/private/previous_timesheet/navbar/navbar.css
+++ b/private/previous_timesheet/navbar/navbar.css
@@ -1,5 +1,8 @@
 * {
-    font-family: Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
 
 body {
