--- a/manager/stylesheet.css
+++ b/manager/stylesheet.css
@@ -153,3 +153,28 @@ input[type=text],input[type=number],input[type=date],input[type=time],input[type
     border-radius: 4px;
     box-sizing: border-box;
 }
+
+/* her redigere jeg mobile udseende */
+@media all and (max-width: 500px) {
+
+    input[type=text],
+    input[type=number],
+    input[type=date],
+    input[type=time],
+    input[type=checkbox],
+    input[type=password] {
+            width: 100%;
+        }
+
+    input[type=password] {
+        width: 100%;
+        }
+    
+    .sbmt{
+        width: 100%;
+    }
+
+    #projectCreationForm {
+        padding: 10px;
+    }
+}
